manifests/default/website/ingress-nginx.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`www.senk0.com`)
    priority: 10
    middlewares:
    services:
    - kind: Service
      name: nginx
      namespace: default
      passHostHeader: true
      port: 80
  tls:
    secretName: senk0
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-http
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`www.senk0.com`)
    priority: 10
    middlewares:
    services:
    - kind: Service
      name: nginx
      namespace: default
      passHostHeader: true
      port: 80
